--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "emacs.d/themes/solarized"]
 	path = emacs.d/themes/solarized
 	url = https://github.com/sellout/emacs-color-theme-solarized.git
+[submodule "emacs.d/asdf"]
+	path = emacs.d/asdf
+	url = git://common-lisp.net/projects/asdf/asdf.git
