--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "emacs.d/asdf"]
 	path = emacs.d/asdf
 	url = git://common-lisp.net/projects/asdf/asdf.git
+[submodule "emacs.d/theme-changer"]
+	path = emacs.d/theme-changer
+	url = https://github.com/hadronzoo/theme-changer.git
