--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "emacs.d/git-emacs"]
 	path = emacs.d/git-emacs
 	url = https://github.com/tsgates/git-emacs.git
+[submodule "vim/bundle/vim-pathogen"]
+	path = vim/bundle/vim-pathogen
+	url = https://github.com/tpope/vim-pathogen.git
