--- a/iterm2/com.googlecode.iterm2.plist
+++ b/iterm2/com.googlecode.iterm2.plist
@@ -544,21 +544,21 @@
 		<integer>1</integer>
 	</dict>
 	<key>NSWindow Frame NSColorPanel</key>
-	<string>307 274 214 309 0 0 1440 878 </string>
+	<string>248 108 214 309 0 0 1440 878 </string>
 	<key>NSWindow Frame NSFontPanel</key>
 	<string>215 182 445 270 0 0 1440 878 </string>
 	<key>NSWindow Frame Preferences</key>
-	<string>86 393 924 485 0 0 1440 878 </string>
+	<string>204 228 924 485 0 0 1440 878 </string>
 	<key>NSWindow Frame SUStatusFrame</key>
 	<string>528 562 384 129 0 0 1440 878 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>215 91 850 666 0 0 1440 878 </string>
+	<string>118 61 1109 688 0 0 1440 878 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
-	<string>147 138 850 666 0 0 1440 878 </string>
+	<string>129 61 1305 666 0 0 1440 878 </string>
 	<key>NSWindow Frame iTerm Window 2</key>
-	<string>416 74 850 666 0 0 1440 878 </string>
+	<string>416 146 850 666 0 0 1440 878 </string>
 	<key>NSWindow Frame iTerm Window 3</key>
-	<string>297 199 857 602 0 0 1440 878 </string>
+	<string>297 135 850 666 0 0 1440 878 </string>
 	<key>NSWindow Frame iTerm Window 4</key>
 	<string>246 427 570 451 0 0 1440 878 </string>
 	<key>NeverWarnAboutShortLivedSessions_7B13759C-33B5-49F6-BD21-0B167F4B5AAA</key>
@@ -1273,7 +1273,7 @@
 			<key>Tags</key>
 			<array/>
 			<key>Terminal Type</key>
-			<string>xterm</string>
+			<string>xterm-256color</string>
 			<key>Transparency</key>
 			<real>0.0</real>
 			<key>Triggers</key>
@@ -1298,6 +1298,8 @@
 			<string>/Users/schober</string>
 		</dict>
 	</array>
+	<key>NoSyncNeverRemindPrefsChangesCopy</key>
+	<true/>
 	<key>OnlyWhenMoreTabs</key>
 	<true/>
 	<key>OpenArrangementAtStartup</key>
@@ -1362,7 +1364,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2013-07-17T03:30:44Z</date>
+	<date>2013-07-21T06:05:46Z</date>
 	<key>SUSkippedVersion</key>
 	<string>1.0.0.20130624</string>
 	<key>SavePasteHistory</key>
