--- a/iterm2/com.googlecode.iterm2.plist
+++ b/iterm2/com.googlecode.iterm2.plist
@@ -467,6 +467,51 @@
 	<false/>
 	<key>FsTabDelay</key>
 	<real>1</real>
+	<key>GlobalKeyMap</key>
+	<dict>
+		<key>0x7b-0x1a0000</key>
+		<dict>
+			<key>Action</key>
+			<integer>33</integer>
+			<key>Text</key>
+			<string></string>
+		</dict>
+		<key>0x7b-0xa0000</key>
+		<dict>
+			<key>Action</key>
+			<integer>2</integer>
+			<key>Text</key>
+			<string></string>
+		</dict>
+		<key>0x7d-0x1a0000</key>
+		<dict>
+			<key>Action</key>
+			<integer>34</integer>
+			<key>Text</key>
+			<string></string>
+		</dict>
+		<key>0x7d-0xa0000</key>
+		<dict>
+			<key>Action</key>
+			<integer>0</integer>
+			<key>Text</key>
+			<string></string>
+		</dict>
+		<key>0x9-0x40000</key>
+		<dict>
+			<key>Action</key>
+			<integer>32</integer>
+			<key>Text</key>
+			<string></string>
+		</dict>
+		<key>0xf703-0x320000</key>
+		<dict>
+			<key>Action</key>
+			<integer>34</integer>
+			<key>Text</key>
+			<string></string>
+		</dict>
+	</dict>
 	<key>HiddenAFRStrokeThickness</key>
 	<real>0.0</real>
 	<key>HiddenAdvancedFontRendering</key>
@@ -496,9 +541,9 @@
 	<key>JobName</key>
 	<true/>
 	<key>LeftCommand</key>
-	<integer>7</integer>
-	<key>LeftOption</key>
 	<integer>2</integer>
+	<key>LeftOption</key>
+	<integer>7</integer>
 	<key>LoadPrefsFromCustomFolder</key>
 	<true/>
 	<key>MaxVertically</key>
@@ -548,13 +593,13 @@
 	<key>NSWindow Frame NSFontPanel</key>
 	<string>215 182 445 270 0 0 1440 878 </string>
 	<key>NSWindow Frame Preferences</key>
-	<string>204 228 924 485 0 0 1440 878 </string>
+	<string>246 209 924 485 0 0 1440 878 </string>
 	<key>NSWindow Frame SUStatusFrame</key>
 	<string>528 562 384 129 0 0 1440 878 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>118 61 1109 688 0 0 1440 878 </string>
+	<string>94 85 850 666 0 0 1440 878 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
-	<string>129 61 1305 666 0 0 1440 878 </string>
+	<string>94 85 850 666 0 0 1440 878 </string>
 	<key>NSWindow Frame iTerm Window 2</key>
 	<string>416 146 850 666 0 0 1440 878 </string>
 	<key>NSWindow Frame iTerm Window 3</key>
@@ -819,6 +864,7 @@
 				<string>ssh</string>
 				<string>slogin</string>
 				<string>telnet</string>
+				<string>screen</string>
 			</array>
 			<key>Keyboard Map</key>
 			<dict>
@@ -878,13 +924,6 @@
 					<key>Text</key>
 					<string>0x7f</string>
 				</dict>
-				<key>0x9-0x40000</key>
-				<dict>
-					<key>Action</key>
-					<integer>11</integer>
-					<key>Text</key>
-					<string>9</string>
-				</dict>
 				<key>0xf700-0x220000</key>
 				<dict>
 					<key>Action</key>
@@ -909,9 +948,16 @@
 				<key>0xf700-0x280000</key>
 				<dict>
 					<key>Action</key>
-					<integer>11</integer>
+					<integer>10</integer>
 					<key>Text</key>
-					<string>0x1b 0x1b 0x5b 0x41</string>
+					<string>[1;4A</string>
+				</dict>
+				<key>0xf700-0x2c0000</key>
+				<dict>
+					<key>Action</key>
+					<integer>10</integer>
+					<key>Text</key>
+					<string>[1;8A</string>
 				</dict>
 				<key>0xf701-0x220000</key>
 				<dict>
@@ -937,9 +983,16 @@
 				<key>0xf701-0x280000</key>
 				<dict>
 					<key>Action</key>
-					<integer>11</integer>
+					<integer>10</integer>
 					<key>Text</key>
-					<string>0x1b 0x1b 0x5b 0x42</string>
+					<string>[1;4B</string>
+				</dict>
+				<key>0xf701-0x2c0000</key>
+				<dict>
+					<key>Action</key>
+					<integer>10</integer>
+					<key>Text</key>
+					<string>[1;8B</string>
 				</dict>
 				<key>0xf702-0x220000</key>
 				<dict>
@@ -967,7 +1020,14 @@
 					<key>Action</key>
 					<integer>10</integer>
 					<key>Text</key>
-					<string>[1;5D</string>
+					<string>[1;4D</string>
+				</dict>
+				<key>0xf702-0x2c0000</key>
+				<dict>
+					<key>Action</key>
+					<integer>10</integer>
+					<key>Text</key>
+					<string>[1;8D</string>
 				</dict>
 				<key>0xf703-0x220000</key>
 				<dict>
@@ -995,7 +1055,14 @@
 					<key>Action</key>
 					<integer>10</integer>
 					<key>Text</key>
-					<string>[1;5C</string>
+					<string>[1;4C</string>
+				</dict>
+				<key>0xf703-0x2c0000</key>
+				<dict>
+					<key>Action</key>
+					<integer>10</integer>
+					<key>Text</key>
+					<string>[1;8C</string>
 				</dict>
 				<key>0xf704-0x20000</key>
 				<dict>
@@ -1127,7 +1194,7 @@
 			<key>Option Key Sends</key>
 			<integer>2</integer>
 			<key>Prompt Before Closing 2</key>
-			<integer>0</integer>
+			<integer>2</integer>
 			<key>Right Option Key Sends</key>
 			<integer>2</integer>
 			<key>Rows</key>
@@ -1354,9 +1421,9 @@
 	<key>QuitWhenAllWindowsClosed</key>
 	<false/>
 	<key>RightCommand</key>
-	<integer>8</integer>
-	<key>RightOption</key>
 	<integer>3</integer>
+	<key>RightOption</key>
+	<integer>8</integer>
 	<key>SUEnableAutomaticChecks</key>
 	<true/>
 	<key>SUFeedURL</key>
@@ -1364,7 +1431,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2013-07-21T06:05:46Z</date>
+	<date>2013-07-28T19:44:45Z</date>
 	<key>SUSkippedVersion</key>
 	<string>1.0.0.20130624</string>
 	<key>SavePasteHistory</key>
