--- a/iterm2/com.googlecode.iterm2.plist
+++ b/iterm2/com.googlecode.iterm2.plist
@@ -562,11 +562,13 @@
 	<key>NSWindow Frame NSFontPanel</key>
 	<string>135 191 445 270 0 0 1440 878 </string>
 	<key>NSWindow Frame Preferences</key>
-	<string>260 316 924 485 0 0 1440 878 </string>
+	<string>434 299 924 485 0 0 1440 878 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>225 99 850 666 0 0 1440 878 </string>
+	<string>0 155 850 666 0 0 1440 878 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
 	<string>400 116 850 666 0 0 1440 878 </string>
+	<key>NSWindow Frame iTerm Window 2</key>
+	<string>735 44 850 666 0 0 1440 878 </string>
 	<key>NeverWarnAboutShortLivedSessions_7B13759C-33B5-49F6-BD21-0B167F4B5AAA</key>
 	<true/>
 	<key>New Bookmarks</key>
@@ -599,47 +601,47 @@
 			<key>Ansi 10 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.020208755508065224</real>
+				<real>0.38298487663269043</real>
 				<key>Green Component</key>
-				<real>0.54115492105484009</real>
+				<real>0.35665956139564514</real>
 				<key>Red Component</key>
-				<real>0.44977453351020813</real>
+				<real>0.27671992778778076</real>
 			</dict>
 			<key>Ansi 11 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.023484811186790466</real>
+				<real>0.43850564956665039</real>
 				<key>Green Component</key>
-				<real>0.46751424670219421</real>
+				<real>0.40717673301696777</real>
 				<key>Red Component</key>
-				<real>0.64746475219726562</real>
+				<real>0.32436618208885193</real>
 			</dict>
 			<key>Ansi 12 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.78231418132781982</real>
+				<real>0.51685798168182373</real>
 				<key>Green Component</key>
-				<real>0.46265947818756104</real>
+				<real>0.50962930917739868</real>
 				<key>Red Component</key>
-				<real>0.12754884362220764</real>
+				<real>0.44058024883270264</real>
 			</dict>
 			<key>Ansi 13 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.43516635894775391</real>
+				<real>0.72908437252044678</real>
 				<key>Green Component</key>
-				<real>0.10802463442087173</real>
+				<real>0.33896297216415405</real>
 				<key>Red Component</key>
-				<real>0.77738940715789795</real>
+				<real>0.34798634052276611</real>
 			</dict>
 			<key>Ansi 14 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.52502274513244629</real>
+				<real>0.56363654136657715</real>
 				<key>Green Component</key>
-				<real>0.57082360982894897</real>
+				<real>0.56485837697982788</real>
 				<key>Red Component</key>
-				<real>0.14679534733295441</real>
+				<real>0.50599193572998047</real>
 			</dict>
 			<key>Ansi 15 Color</key>
 			<dict>
@@ -716,11 +718,11 @@
 			<key>Ansi 9 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.14145715534687042</real>
+				<real>0.073530435562133789</real>
 				<key>Green Component</key>
-				<real>0.108406662940979</real>
+				<real>0.21325300633907318</real>
 				<key>Red Component</key>
-				<real>0.81926965713500977</real>
+				<real>0.74176257848739624</real>
 			</dict>
 			<key>Automatically Log</key>
 			<false/>
@@ -1565,7 +1567,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2013-11-23T02:58:27Z</date>
+	<date>2013-12-04T18:24:57Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>Show Toolbelt</key>
@@ -1613,6 +1615,6 @@
 	<key>WordCharacters</key>
 	<string>/-+\~_.</string>
 	<key>iTerm Version</key>
-	<string>1.0.0.20131116</string>
+	<string>1.0.0.20131124</string>
 </dict>
 </plist>
