--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,9 @@
 [submodule "emacs.d/paredit"]
 	path = emacs.d/paredit
 	url = http://mumble.net/~campbell/git/paredit.git/
+[submodule "emacs.d/powerline"]
+	path = emacs.d/powerline
+	url = https://github.com/milkypostman/powerline.git
+[submodule "vim/bundle/vim-airline"]
+	path = vim/bundle/vim-airline
+	url = https://github.com/bling/vim-airline.git
