--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "vim/bundle/vim-airline"]
 	path = vim/bundle/vim-airline
 	url = https://github.com/bling/vim-airline.git
+[submodule "emacs.d/multiple-cursors"]
+	path = emacs.d/multiple-cursors
+	url = https://github.com/magnars/multiple-cursors.el.git
