--- a/iterm2/com.googlecode.iterm2.plist
+++ b/iterm2/com.googlecode.iterm2.plist
@@ -469,6 +469,13 @@
 	<real>10</real>
 	<key>GlobalKeyMap</key>
 	<dict>
+		<key>0x9-0x100000</key>
+		<dict>
+			<key>Action</key>
+			<integer>22</integer>
+			<key>Text</key>
+			<string></string>
+		</dict>
 		<key>0xf702-0x340000</key>
 		<dict>
 			<key>Action</key>
@@ -562,11 +569,11 @@
 	<key>NSWindow Frame NSColorPanel</key>
 	<string>569 347 214 309 0 0 1440 878 </string>
 	<key>NSWindow Frame NSFontPanel</key>
-	<string>162 391 445 270 0 0 1440 878 </string>
+	<string>118 448 445 270 0 0 1440 878 </string>
 	<key>NSWindow Frame Preferences</key>
-	<string>100 370 924 485 0 0 1440 878 </string>
+	<string>217 170 924 485 0 0 1440 878 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>512 121 850 707 0 0 1440 878 </string>
+	<string>163 145 1151 666 0 0 1440 878 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
 	<string>400 116 850 666 0 0 1440 878 </string>
 	<key>NSWindow Frame iTerm Window 2</key>
@@ -586,8 +593,6 @@
 			<dict>
 				<key>Blue Component</key>
 				<real>0.19370138645172119</real>
-				<key>Color Space</key>
-				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>0.15575926005840302</real>
 				<key>Red Component</key>
@@ -597,8 +602,6 @@
 			<dict>
 				<key>Blue Component</key>
 				<real>0.14145712554454803</real>
-				<key>Color Space</key>
-				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>0.10840645432472229</real>
 				<key>Red Component</key>
@@ -608,8 +611,6 @@
 			<dict>
 				<key>Blue Component</key>
 				<real>0.38298487663269043</real>
-				<key>Color Space</key>
-				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>0.35665956139564514</real>
 				<key>Red Component</key>
@@ -619,8 +620,6 @@
 			<dict>
 				<key>Blue Component</key>
 				<real>0.43850564956665039</real>
-				<key>Color Space</key>
-				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>0.40717673301696777</real>
 				<key>Red Component</key>
@@ -630,8 +629,6 @@
 			<dict>
 				<key>Blue Component</key>
 				<real>0.51685798168182373</real>
-				<key>Color Space</key>
-				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>0.50962930917739868</real>
 				<key>Red Component</key>
@@ -641,8 +638,6 @@
 			<dict>
 				<key>Blue Component</key>
 				<real>0.72908437252044678</real>
-				<key>Color Space</key>
-				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>0.33896297216415405</real>
 				<key>Red Component</key>
@@ -652,8 +647,6 @@
 			<dict>
 				<key>Blue Component</key>
 				<real>0.56363654136657715</real>
-				<key>Color Space</key>
-				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>0.56485837697982788</real>
 				<key>Red Component</key>
@@ -663,8 +656,6 @@
 			<dict>
 				<key>Blue Component</key>
 				<real>0.86405980587005615</real>
-				<key>Color Space</key>
-				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>0.95794391632080078</real>
 				<key>Red Component</key>
@@ -674,8 +665,6 @@
 			<dict>
 				<key>Blue Component</key>
 				<real>0.020208755508065224</real>
-				<key>Color Space</key>
-				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>0.54115492105484009</real>
 				<key>Red Component</key>
@@ -685,8 +674,6 @@
 			<dict>
 				<key>Blue Component</key>
 				<real>0.023484811186790466</real>
-				<key>Color Space</key>
-				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>0.46751424670219421</real>
 				<key>Red Component</key>
@@ -696,8 +683,6 @@
 			<dict>
 				<key>Blue Component</key>
 				<real>0.78231418132781982</real>
-				<key>Color Space</key>
-				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>0.46265947818756104</real>
 				<key>Red Component</key>
@@ -707,8 +692,6 @@
 			<dict>
 				<key>Blue Component</key>
 				<real>0.43516635894775391</real>
-				<key>Color Space</key>
-				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>0.10802463442087173</real>
 				<key>Red Component</key>
@@ -718,8 +701,6 @@
 			<dict>
 				<key>Blue Component</key>
 				<real>0.52502274513244629</real>
-				<key>Color Space</key>
-				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>0.57082360982894897</real>
 				<key>Red Component</key>
@@ -729,8 +710,6 @@
 			<dict>
 				<key>Blue Component</key>
 				<real>0.79781103134155273</real>
-				<key>Color Space</key>
-				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>0.89001238346099854</real>
 				<key>Red Component</key>
@@ -740,8 +719,6 @@
 			<dict>
 				<key>Blue Component</key>
 				<real>0.15170273184776306</real>
-				<key>Color Space</key>
-				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>0.11783610284328461</real>
 				<key>Red Component</key>
@@ -751,15 +728,11 @@
 			<dict>
 				<key>Blue Component</key>
 				<real>0.073530435562133789</real>
-				<key>Color Space</key>
-				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>0.21325300633907318</real>
 				<key>Red Component</key>
 				<real>0.74176257848739624</real>
 			</dict>
-			<key>Application Keypad Allowed</key>
-			<integer>1</integer>
 			<key>Automatically Log</key>
 			<false/>
 			<key>BM Growl</key>
@@ -768,8 +741,6 @@
 			<dict>
 				<key>Blue Component</key>
 				<real>0.86405980587005615</real>
-				<key>Color Space</key>
-				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>0.95794391632080078</real>
 				<key>Red Component</key>
@@ -793,8 +764,6 @@
 			<dict>
 				<key>Blue Component</key>
 				<real>0.38298487663269043</real>
-				<key>Color Space</key>
-				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>0.35665956139564514</real>
 				<key>Red Component</key>
@@ -812,8 +781,6 @@
 			<dict>
 				<key>Blue Component</key>
 				<real>0.43850564956665039</real>
-				<key>Color Space</key>
-				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>0.40717673301696777</real>
 				<key>Red Component</key>
@@ -823,8 +790,6 @@
 			<dict>
 				<key>Blue Component</key>
 				<real>0.79781103134155273</real>
-				<key>Color Space</key>
-				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>0.89001238346099854</real>
 				<key>Red Component</key>
@@ -850,8 +815,6 @@
 			<dict>
 				<key>Blue Component</key>
 				<real>0.43850564956665039</real>
-				<key>Color Space</key>
-				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>0.40717673301696777</real>
 				<key>Red Component</key>
@@ -1370,15 +1333,13 @@
 			<key>Name</key>
 			<string>Default</string>
 			<key>Non Ascii Font</key>
-			<string>InconsolataForPowerline 12</string>
+			<string>MesloLGM-RegularForPowerline 11.5</string>
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Normal Font</key>
-			<string>Inconsolata-dzForPowerline 12</string>
+			<string>InconsolataForPowerline 14</string>
 			<key>Option Key Sends</key>
 			<integer>2</integer>
-			<key>Prevent Opening in a Tab</key>
-			<false/>
 			<key>Prompt Before Closing 2</key>
 			<integer>2</integer>
 			<key>Right Option Key Sends</key>
@@ -1397,8 +1358,6 @@
 			<dict>
 				<key>Blue Component</key>
 				<real>0.86405980587005615</real>
-				<key>Color Space</key>
-				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>0.95794391632080078</real>
 				<key>Red Component</key>
@@ -1408,8 +1367,6 @@
 			<dict>
 				<key>Blue Component</key>
 				<real>0.43516635894775391</real>
-				<key>Color Space</key>
-				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>0.10802463442087173</real>
 				<key>Red Component</key>
@@ -1545,10 +1502,8 @@
 			<false/>
 			<key>Use Italic Font</key>
 			<true/>
-			<key>Use Non-ASCII Font</key>
-			<true/>
 			<key>Vertical Spacing</key>
-			<real>1</real>
+			<real>0.99844276905059814</real>
 			<key>Visual Bell</key>
 			<true/>
 			<key>Window Type</key>
@@ -1621,11 +1576,11 @@
 	<key>SUEnableAutomaticChecks</key>
 	<true/>
 	<key>SUFeedURL</key>
-	<string>http://iterm2.com/appcasts/nightly.xml</string>
+	<string>http://iterm2.com/appcasts/testing.xml</string>
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2014-01-07T23:35:22Z</date>
+	<date>2014-02-06T04:00:52Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>Show Toolbelt</key>
@@ -1665,7 +1620,7 @@
 	<key>WebKitDefaultFontSize</key>
 	<integer>11</integer>
 	<key>WebKitStandardFont</key>
-	<string>.Lucida Grande UI</string>
+	<string>Lucida Grande</string>
 	<key>WindowNumber</key>
 	<true/>
 	<key>WindowStyle</key>
@@ -1673,6 +1628,6 @@
 	<key>WordCharacters</key>
 	<string>/-+\~_.</string>
 	<key>iTerm Version</key>
-	<string>1.0.0.20140107-nightly</string>
+	<string>1.0.0.20140112</string>
 </dict>
 </plist>
