Emacs: Fixing some keyboard issues, and adding a bunch more.

--- a/iterm2/com.googlecode.iterm2.plist
+++ b/iterm2/com.googlecode.iterm2.plist
@@ -571,9 +571,9 @@
 	<key>NSWindow Frame NSFontPanel</key>
 	<string>118 448 445 270 0 0 1440 878 </string>
 	<key>NSWindow Frame Preferences</key>
-	<string>217 170 924 485 0 0 1440 878 </string>
+	<string>217 169 924 485 0 0 1440 878 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>163 145 1151 666 0 0 1440 878 </string>
+	<string>516 173 850 666 0 0 1440 878 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
 	<string>400 116 850 666 0 0 1440 878 </string>
 	<key>NSWindow Frame iTerm Window 2</key>
@@ -1042,6 +1042,13 @@
 					<integer>11</integer>
 					<key>Text</key>
 					<string>0x1d 0x7f</string>
+				</dict>
+				<key>0xd-0x40000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1d 0x0d</string>
 				</dict>
 				<key>0xf700-0x220000</key>
 				<dict>
@@ -1580,7 +1587,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2014-02-06T04:00:52Z</date>
+	<date>2014-02-10T16:46:12Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>Show Toolbelt</key>
