--- a/.gitmodules
+++ b/.gitmodules
@@ -19,6 +19,7 @@
 [submodule "emacs.d/powerline"]
 	path = emacs.d/powerline
 	url = https://github.com/milkypostman/powerline.git
+	branch = master
 [submodule "vim/bundle/vim-airline"]
 	path = vim/bundle/vim-airline
 	url = https://github.com/bling/vim-airline.git
