Meta: Emacs's tramp logs should not be tracked.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
-answerback.Linux
-answerback.Darwin
-*_local
-emacs.d/session.*
-emacs.d/elpa
-emacs.d/bookmarks
-emacs.d/request
-emacs.d/xkcd
 *.dat
+*_local
+answerback.Darwin
+answerback.Linux
+emacs.d/bookmarks
+emacs.d/elpa
+emacs.d/request
+emacs.d/session.*
+emacs.d/tramp
+emacs.d/xkcd
