--- a/iterm2/com.googlecode.iterm2.plist
+++ b/iterm2/com.googlecode.iterm2.plist
@@ -571,9 +571,9 @@
 	<key>NSWindow Frame NSFontPanel</key>
 	<string>118 448 445 270 0 0 1440 878 </string>
 	<key>NSWindow Frame Preferences</key>
-	<string>436 164 924 485 0 0 1440 900 </string>
+	<string>115 108 924 485 0 0 1440 878 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>511 99 850 666 0 0 1440 878 </string>
+	<string>472 212 920 666 0 0 1440 878 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
 	<string>400 116 850 666 0 0 1440 878 </string>
 	<key>NSWindow Frame iTerm Window 2</key>
@@ -1554,6 +1554,13 @@
 					<key>Text</key>
 					<string>[1;8D</string>
 				</dict>
+				<key>0xf702-0x300000</key>
+				<dict>
+					<key>Action</key>
+					<integer>10</integer>
+					<key>Text</key>
+					<string>[1;3D</string>
+				</dict>
 				<key>0xf703-0x220000</key>
 				<dict>
 					<key>Action</key>
@@ -1595,6 +1602,13 @@
 					<integer>10</integer>
 					<key>Text</key>
 					<string>[1;8C</string>
+				</dict>
+				<key>0xf703-0x300000</key>
+				<dict>
+					<key>Action</key>
+					<integer>10</integer>
+					<key>Text</key>
+					<string>[1;3C</string>
 				</dict>
 				<key>0xf704-0x20000</key>
 				<dict>
@@ -1965,9 +1979,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2014-10-07T04:04:12Z</date>
-	<key>SUSkippedVersion</key>
-	<string>1.0.0.20140629</string>
+	<date>2014-11-12T04:09:27Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>Show Toolbelt</key>
@@ -2007,7 +2019,7 @@
 	<key>WebKitDefaultFontSize</key>
 	<integer>11</integer>
 	<key>WebKitStandardFont</key>
-	<string>Lucida Grande</string>
+	<string>.Lucida Grande UI</string>
 	<key>WindowNumber</key>
 	<true/>
 	<key>WindowStyle</key>
@@ -2019,6 +2031,6 @@
 	<key>findRegex_iTerm</key>
 	<false/>
 	<key>iTerm Version</key>
-	<string>1.0.0.20140518</string>
+	<string>2.0.0.20141103</string>
 </dict>
 </plist>
