--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "emacs.d/asdf"]
 	path = emacs.d/asdf
-	url = git://common-lisp.net/projects/asdf/asdf.git
+	url = https://gitlab.common-lisp.net/asdf/asdf.git
 	branch = master
 [submodule "emacs.d/theme-changer"]
 	path = emacs.d/theme-changer
