Submodules: Add powerline-fonts.

--- a/.gitmodules
+++ b/.gitmodules
@@ -36,3 +36,7 @@
 	path = emacs.d/powerline
 	url = https://github.com/schober/powerline.git
 	branch = master
+[submodule "powerline-fonts"]
+	path = powerline-fonts
+	url = https://github.com/powerline/fonts.git
+	branch = master
