Git: ignore emacs recentf

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ answerback.Linux
 emacs.d/bookmarks
 emacs.d/elpa
 emacs.d/ido.last
+emacs.d/recentf
 emacs.d/request
 emacs.d/session.*
 emacs.d/tramp
